--- a/theme.css
+++ b/theme.css
@@ -1,10 +1,10 @@
-body {
+.a11y_body {
 	/*background-color: #FFFFFF;*/
 	background-color: white !important;
 	font-family: sans-serif !important;
 	color: #000000 !important;
 
-	/* Font Edits 
+	/* Font Edits
 	font-size: 1.5em !important;
 	line-height: 2em !important;
 	font-weight: bold !important;*/
@@ -12,21 +12,20 @@ body {
   /*background: url('https://media.giphy.com/media/3o7WTDJQVuYwhhuLhC/giphy.gif') !important;*/
 }
 
-a:link {
+.a11y_a:link {
 	color: #091691 !important;
-	
 }
-a:visited {
+
+.a11y_a:visited {
 	color: #5c1873 !important;
-	
 }
-a:hover {
+
+.a11y_a:hover {
 	color: #0c1db3 !important;
-	
 }
-a:active {
+
+.a11y_a:active {
 	color: #070f5e !important;
-	
 }
 
 /* Adjust color of links (change from dark theme to light theme makes it
